checkSonarlintIssue